--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "cp src/index.html build/index.html;tsc",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build; electron build/index.js"
@@ -23,5 +23,8 @@
     "@types/node": "^14.14.35",
     "electron": "^12.0.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "@types/electron": "^1.6.10"
   }
 }
